; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/block/extr_blk-core.c_blk_end_request_err.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/block/extr_blk-core.c_blk_end_request_err.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.request = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @blk_end_request_err(%struct.request* %0, i32 %1) #0 {
  %3 = alloca %struct.request*, align 8
  %4 = alloca i32, align 4
  store %struct.request* %0, %struct.request** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp sge i32 %5, 0
  %7 = zext i1 %6 to i32
  %8 = call i32 @WARN_ON(i32 %7)
  %9 = load %struct.request*, %struct.request** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = load %struct.request*, %struct.request** %3, align 8
  %12 = call i32 @blk_rq_err_bytes(%struct.request* %11)
  %13 = call i32 @blk_end_request(%struct.request* %9, i32 %10, i32 %12)
  ret i32 %13
}

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32 @blk_end_request(%struct.request*, i32, i32) #1

declare dso_local i32 @blk_rq_err_bytes(%struct.request*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
